; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpio/extr_gpio-tps65912.c_tps65912_gpio_set.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpio/extr_gpio-tps65912.c_tps65912_gpio_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gpio_chip = type { i32 }
%struct.tps65912_gpio = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@TPS65912_GPIO1 = common dso_local global i32 0, align 4
@GPIO_SET_MASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.gpio_chip*, i32, i32)* @tps65912_gpio_set to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tps65912_gpio_set(%struct.gpio_chip* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.gpio_chip*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.tps65912_gpio*, align 8
  store %struct.gpio_chip* %0, %struct.gpio_chip** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load %struct.gpio_chip*, %struct.gpio_chip** %4, align 8
  %9 = call %struct.tps65912_gpio* @gpiochip_get_data(%struct.gpio_chip* %8)
  store %struct.tps65912_gpio* %9, %struct.tps65912_gpio** %7, align 8
  %10 = load %struct.tps65912_gpio*, %struct.tps65912_gpio** %7, align 8
  %11 = getelementptr inbounds %struct.tps65912_gpio, %struct.tps65912_gpio* %10, i32 0, i32 0
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* @TPS65912_GPIO1, align 4
  %16 = load i32, i32* %5, align 4
  %17 = add i32 %15, %16
  %18 = load i32, i32* @GPIO_SET_MASK, align 4
  %19 = load i32, i32* %6, align 4
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %23

21:                                               ; preds = %3
  %22 = load i32, i32* @GPIO_SET_MASK, align 4
  br label %24

23:                                               ; preds = %3
  br label %24

24:                                               ; preds = %23, %21
  %25 = phi i32 [ %22, %21 ], [ 0, %23 ]
  %26 = call i32 @regmap_update_bits(i32 %14, i32 %17, i32 %18, i32 %25)
  ret void
}

declare dso_local %struct.tps65912_gpio* @gpiochip_get_data(%struct.gpio_chip*) #1

declare dso_local i32 @regmap_update_bits(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
